--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
   </dependencies>
 
   <build>
-    <!-- <pluginManagement>
+    <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -142,7 +142,7 @@
           </executions>
         </plugin>
       </plugins>
-    </pluginManagement> -->
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
