--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,10 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>3.7</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4.1</version>
       </plugin>
