--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
   <dependencies>
     <!-- regular dependencies -->
     <dependency>
+      <groupId>org.jenkins-ci.tools</groupId>
+      <artifactId>maven-hpi-plugin</artifactId>
+      <version>3.7</version>
+    </dependency>
+    <dependency>
       <groupId>net.jcip</groupId>
       <artifactId>jcip-annotations</artifactId>
       <version>1.0</version>
