--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   </parent>
 
   <artifactId>console-tail</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>Console Tail Plugin</name>
@@ -86,11 +86,6 @@
   <dependencies>
     <!-- regular dependencies -->
     <dependency>
-      <groupId>org.jenkins-ci.tools</groupId>
-      <artifactId>maven-hpi-plugin</artifactId>
-      <version>3.7</version>
-    </dependency>
-    <dependency>
       <groupId>net.jcip</groupId>
       <artifactId>jcip-annotations</artifactId>
       <version>1.0</version>
@@ -141,6 +136,14 @@
                       Plugin.
                     </message>
                   </requireMavenVersion>
+                  <requireUpperBoundDeps>
+                      <!-- 'uniqueVersions' (default:false) can be set to true if you want to compare the timestamped SNAPSHOTs  -->
+                      <!-- <uniqueVersions>true</uniqueVersions> -->
+                      <!-- If you wish to ignore certain cases: -->
+                    <excludes>
+                      <exclude>com.google.guava:guava</exclude>
+                    </excludes>
+                  </requireUpperBoundDeps>
                 </rules>
               </configuration>
             </execution>
@@ -149,10 +152,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
-        <artifactId>maven-hpi-plugin</artifactId>
-        <version>3.7</version>
-      </plugin>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4.1</version>
