--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.7</version>
+    <version>3.47</version>
   </parent>
 
   <artifactId>console-tail</artifactId>
@@ -68,6 +68,7 @@
     <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.findbugs.failure.strict>true</maven.findbugs.failure.strict>
+    <java.level>12</java.level>
   </properties>
 
   <repositories>
@@ -116,7 +117,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.3.1</version>
+          <version>3.0.0-M2</version>
           <executions>
             <execution>
               <id>enforce-maven</id>
@@ -136,14 +137,6 @@
                       Plugin.
                     </message>
                   </requireMavenVersion>
-                  <requireUpperBoundDeps>
-                      <!-- 'uniqueVersions' (default:false) can be set to true if you want to compare the timestamped SNAPSHOTs  -->
-                      <!-- <uniqueVersions>true</uniqueVersions> -->
-                      <!-- If you wish to ignore certain cases: -->
-                    <excludes>
-                      <exclude>com.google.guava:guava</exclude>
-                    </excludes>
-                  </requireUpperBoundDeps>
                 </rules>
               </configuration>
             </execution>
